--- a/web/src/stylesheets/components/_Inspirations.scss
+++ b/web/src/stylesheets/components/_Inspirations.scss
@@ -22,8 +22,8 @@
 			display: block;
 			position: absolute;
 			bottom: 0.3rem;
-			// Must subtract by section padding-left (2.4) and __tabs padding-left (1.4)
 			min-width: 908px;
+			// Must subtract by section padding-left (2.4) and __tabs padding-left (1.4)
 			width: calc(100% - (1.4rem + 2.4rem));
 			height: 0.1rem;
 			background-color: rgb(221, 221, 221);
@@ -139,5 +139,18 @@
 @media (min-width: 744px) {
 	.InspirationPanel__item {
 		width: 33.3333%;
+	}
+}
+
+@media (min-width: 1128px) {
+	.InspirationPanel__item {
+		width: 25%;
+	}
+
+	.InspirationTabs__tabs {
+		&::after {
+			// Must subtract by section padding-left (8) and __tabs padding-left (1.4)
+			width: calc(100% - (1.4rem + 8rem));
+		}
 	}
 }
