--- a/web/src/stylesheets/layout/_footer.scss
+++ b/web/src/stylesheets/layout/_footer.scss
@@ -1,7 +1,12 @@
 .Footer {
 	padding-right: 2.4rem;
 
-	& > div {
+	.FooterSection {
+		padding-bottom: 3.2rem;
+	}
+
+	&__meta,
+	.FooterSection {
 		padding: 3.2rem 0;
 		border-top: 1px solid #dddddd;
 
@@ -32,6 +37,7 @@
 				}
 			}
 		}
+
 		&__legal {
 		}
 
@@ -52,7 +58,7 @@
 	}
 
 	&__head {
-		font-size: 1.6rem;
+		font-size: 1.4rem;
 	}
 
 	&__list {
@@ -96,5 +102,14 @@
 	.FooterSection__list {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+@media (min-width: 1128px) {
+	.Footer {
+
+		&>div {
+			border: none;
+		}
 	}
 }
