--- a/web/src/stylesheets/pages/_Landing.scss
+++ b/web/src/stylesheets/pages/_Landing.scss
@@ -90,30 +90,33 @@
 
 			&__image {
 				width: 100%;
-				// position: relative;
+				height: 600px;
+				display: inline-block;
+				position: relative;
+				overflow: hidden;
 
 				img {
-					z-index: -1;
-					width: 100%;
 					border-radius: 2.5rem;
-					// position: absolute;
-					// left: 0px;
-					// right: 0px;
-					// object-fit: cover;
-					// object-position: 50% 50%;
-					// vertical-align: bottom;
+					pointer-events: none;
+					position: absolute;
+					width: 100%;
+					height: 100%;
+					z-index: -1;
+					object-fit: cover;
+					object-position: 50% 90%;
+					vertical-align: bottom;
 				}
 			}
 
 			&__text {
-				width: 90%;
+				width: 287px;
 				display: flex;
 				flex-direction: column;
 				align-items: center;
 				text-align: center;
 				position: absolute;
-				top: 15%;
-				transform: translateY(-15%);
+				top: 8%;
+				transform: translateY(-8%);
 				color: white;
 				font-weight: 400;
 
@@ -151,13 +154,20 @@
 @media (min-width: 744px) {
 	.Landing__try-hosting {
 		&__content {
+			&__image {
+				height: 360px;
+				img {
+					object-position: 50% 50%;
+				}
+			}
+
 			&__text {
 				align-items: flex-start;
 				text-align: left;
 				top: 50%;
 				left: 7.5%;
 				transform: translateY(-50%);
-				width: 40%;
+				width: 295px;
 
 				span {
 					margin: 1.5rem 0;
@@ -184,6 +194,23 @@
 		&__footer {
 			padding-left: 8rem;
 			padding-right: 8rem;
+		}
+
+		&__try-hosting {
+			&__content {
+				&__image {
+					height: 400px;
+				}
+			}
+
+		}
+	}
+}
+
+@media (min-width: 1440px) {
+	.Landing {
+		&__try-hosting__content__image {
+			height: 480px;
 		}
 	}
 }
