Finished with UX for search form

--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -19,7 +19,8 @@
 	"components/PasswordHints.scss", "components/Modal.scss",
 	"components/Navbar.scss", "components/Search.scss",
 	"components/Destinations.scss", "components/ListingTypes.scss",
-	"components/Inspirations.scss", "components/MobileNavbar.scss";
+	"components/Inspirations.scss", "components/MobileNavbar.scss",
+	"components/FormSearch.scss";
 
 // 6. Page-specific styles
 @import "pages/Listing", "pages/Landing";
