--- a/web/src/stylesheets/components/EntryForm/_EntryForm.scss
+++ b/web/src/stylesheets/components/EntryForm/_EntryForm.scss
@@ -5,133 +5,134 @@
 	position: relative;
 	// TODO: Make scrolling only on the 'main' portion of the form
 	overflow-y: auto;
+}
 
-	.EntryForm {
-		header {
-			height: 6rem;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			border-bottom: 1px solid rgb(235, 235, 235);
-			padding: 0 2.4rem;
+.EntryForm {
 
-			button {
+	header {
+		height: 6rem;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		border-bottom: 1px solid rgb(235, 235, 235);
+		padding: 0 2.4rem;
+
+		button {
+			outline: none;
+			appearance: none;
+			display: inline-block;
+			border-radius: 50%;
+			border: none;
+			outline: none;
+			margin: 0px;
+			padding: 0px;
+			color: rgb(34, 34, 34);
+			cursor: pointer;
+			touch-action: manipulation;
+			position: relative;
+			background: transparent;
+			transition: -ms-transform 0.25s ease 0s,
+				-webkit-transform 0.25s ease 0s, transform 0.25s ease 0s;
+			@include buttonSvgOutline;
+		}
+
+		div {
+			-webkit-box-flex: 0;
+			flex: 0 0 16px;
+			text-align: right;
+		}
+	}
+
+	&__title {
+		font-size: 1.6rem;
+		text-align: center;
+		font-weight: 500;
+	}
+
+	&__main {
+		padding: 2.4rem;
+		padding-top: 2rem;
+
+		&__form {
+			&__submit-button {
+				display: inline-block;
+				position: relative;
+				text-align: center;
+				text-decoration: none;
+				touch-action: manipulation;
+				font-size: 1.6rem;
+				line-height: 2rem;
+				border-radius: 0.8rem;
 				outline: none;
-				appearance: none !important;
-				display: inline-block !important;
-				border-radius: 50% !important;
-				border: none !important;
-				outline: none !important;
-				margin: 0px !important;
-				padding: 0px !important;
-				color: rgb(34, 34, 34) !important;
-				cursor: pointer !important;
-				touch-action: manipulation !important;
-				position: relative !important;
-				background: transparent !important;
-				transition: -ms-transform 0.25s ease 0s,
-					-webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
-				@include buttonSvgOutline;
-			}
+				padding: 1.4rem 2.4rem;
+				transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s,
+					-webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
+				-webkit-tap-highlight-color: transparent;
+				border: none;
+				color: rgb(255, 255, 255);
+				width: 100%;
+				overflow: hidden;
+				background-image: linear-gradient(
+					to right,
+					#00a6de,
+					#2baada,
+					#41add5,
+					#53b1d1,
+					#63b4cd
+				);
 
-			div {
-				-webkit-box-flex: 0;
-				flex: 0 0 16px;
-				text-align: right;
-			}
-		}
+				@include focusOutline;
 
-		&__title {
-			font-size: 1.6rem;
-			text-align: center;
-			font-weight: 500;
-		}
-
-		&__main {
-			padding: 2.4rem;
-			padding-top: 2rem;
-
-			&__form {
-				&__submit-button {
-					display: inline-block;
-					position: relative;
-					text-align: center;
-					text-decoration: none;
-					touch-action: manipulation;
-					font-size: 1.6rem;
-					line-height: 2rem;
-					border-radius: 0.8rem;
-					outline: none;
-					padding: 1.4rem 2.4rem;
-					transition: box-shadow 0.2s ease 0s,
-						-ms-transform 0.1s ease 0s,
-						-webkit-transform 0.1s ease 0s, transform 0.1s ease 0s;
-					-webkit-tap-highlight-color: transparent;
-					border: none;
-					color: rgb(255, 255, 255);
+				.gradient-container {
+					position: absolute;
+					top: 0;
+					left: 0;
+					bottom: 0;
+					right: 0;
 					width: 100%;
-					overflow: hidden;
-					background-image: linear-gradient(
-						to right,
-						#00a6de,
-						#2baada,
-						#41add5,
-						#53b1d1,
-						#63b4cd
-					);
+					height: 100%;
 
-					@include focusOutline;
-
-					.gradient-container {
-						position: absolute;
-						top: 0;
-						left: 0;
-						bottom: 0;
-						right: 0;
+					.gradient {
+						--mouse-x: 0;
+						--mouse-y: 0;
+						display: block;
 						width: 100%;
 						height: 100%;
+						min-width: 200px;
+						background-position: calc(
+								(100 - var(--mouse-x, 0)) * 1%
+							)
+							calc((100 - var(--mouse-y, 0)) * 1%);
+						background-size: 200% 200%;
+						opacity: 0;
+						transition: opacity 1.25s ease 0s;
+						-webkit-tap-highlight-color: transparent !important;
+						background-image: radial-gradient(
+							circle,
+							#00a6de,
+							#36afe0,
+							#51b8e3,
+							#66c0e5,
+							#7ac9e8,
+							#7ac9e8,
+							#7ac9e8,
+							#7ac9e8,
+							#66c0e5,
+							#51b8e3,
+							#36afe0,
+							#00a6de
+						);
 
-						.gradient {
-							--mouse-x: 0;
-							--mouse-y: 0;
-							display: block;
-							width: 100%;
-							height: 100%;
-							min-width: 200px;
-							background-position: calc(
-									(100 - var(--mouse-x, 0)) * 1%
-								)
-								calc((100 - var(--mouse-y, 0)) * 1%);
-							background-size: 200% 200%;
-							opacity: 0;
-							transition: opacity 1.25s ease 0s;
-							-webkit-tap-highlight-color: transparent !important;
-							background-image: radial-gradient(
-								circle,
-								#00a6de,
-								#36afe0,
-								#51b8e3,
-								#66c0e5,
-								#7ac9e8,
-								#7ac9e8,
-								#7ac9e8,
-								#7ac9e8,
-								#66c0e5,
-								#51b8e3,
-								#36afe0,
-								#00a6de
-							);
-
-							&:hover {
-								opacity: 1;
-							}
+						&:hover {
+							opacity: 1;
 						}
 					}
-					.submit-button__text {
-						display: block;
-						position: relative;
-						pointer-events: none;
-					}
+				}
+
+				.submit-button__text {
+					display: block;
+					position: relative;
+					pointer-events: none;
 				}
 			}
 		}
