--- a/web/src/stylesheets/pages/_Landing.scss
+++ b/web/src/stylesheets/pages/_Landing.scss
@@ -270,10 +270,10 @@
 	}
 }
 
-@media (min-width: 1390px) {
+@media (min-width: 2100px) {
 	.Landing__hero__content__image {
 		width: 100%;
-		height: 687.5px;
+		height: 115.6rem;
 		display: inline-block;
 		position: relative;
 		overflow: hidden;
