Added feature that shows users profile picture on login as well as an auth route for login

--- a/web/src/stylesheets/components/EntryForm/_EntryForm.scss
+++ b/web/src/stylesheets/components/EntryForm/_EntryForm.scss
@@ -3,6 +3,7 @@
 	min-height: 40rem;
 	max-height: 100vh;
 	position: relative;
+	border-radius: 1.5rem;
 	// TODO: Make scrolling only on the 'main' portion of the form
 	overflow-y: auto;
 }
