--- a/web/src/stylesheets/components/_Navbar.scss
+++ b/web/src/stylesheets/components/_Navbar.scss
@@ -220,8 +220,15 @@
 				}
 
 				&__link {
-					span {
+					a {
+						width: 100%;
+						height: 100%;
+					}
+
+					span, div {
 						color: rgb(0, 0, 0);
+						font-size: 1.4rem;
+						font-weight: 400;
 					}
 
 					&--inactive {
