--- a/web/src/stylesheets/components/_Inspirations.scss
+++ b/web/src/stylesheets/components/_Inspirations.scss
@@ -23,8 +23,8 @@
 			position: absolute;
 			bottom: 0.3rem;
 			min-width: 908px;
-			// Must subtract by section padding-left (2.4) and __tabs padding-left (1.4)
-			width: calc(100% - (1.4rem + 2.4rem));
+			// Must subtract by __tabs padding-left (1.4)
+			width: calc(100% - 1.4rem);
 			height: 0.1rem;
 			background-color: rgb(221, 221, 221);
 		}
