Finished trips page, fully responsive and links to listing and reservation details

--- a/web/src/stylesheets/abstracts/_variables.scss
+++ b/web/src/stylesheets/abstracts/_variables.scss
@@ -28,6 +28,8 @@ $muted-line-color: #ebebeb;
 $muted-text-color: #757575;
 $muted-text-color-2: rgb(194, 194, 194);
 
+$highlight-hover-color: rgb(245, 245, 245);
+
 /// Disabled text color
 /// @type Color
 $disabled-text-color: #36363679;
