--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -22,4 +22,5 @@
 	"components/FormSearchMobile.scss", "components/ReviewItem.scss";
 
 // 6. Page-specific styles
-@import "pages/Listing", "pages/Landing", "pages/EntryPage", "pages/UserPage";
+@import "pages/Listing", "pages/Landing", "pages/EntryPage", "pages/UserPage",
+	"pages/HostPage", "pages/TripsPage", "pages/TripPage";
