--- a/web/src/stylesheets/components/_MobileNavbar.scss
+++ b/web/src/stylesheets/components/_MobileNavbar.scss
@@ -48,6 +48,7 @@
 			&.active {
 				svg {
 					color: $main-color;
+					fill: $main-color;
 				}
 			}
 
@@ -55,7 +56,7 @@
 				pointer-events: none;
 				
 				.MobileNavbar__links__link__content {
-					color: $disabled-text-color;
+					color: rgb(192, 192, 192);
 
 					svg {
 						color: inherit;
