--- a/web/src/stylesheets/components/_Navbar.scss
+++ b/web/src/stylesheets/components/_Navbar.scss
@@ -220,12 +220,18 @@
 				}
 
 				&__link {
-					a {
-						width: 100%;
-						height: 100%;
+					&>a {
+						
+						&>div{
+							width: 100%;
+							height: 100%;
+							display: flex;
+							align-items: center;
+						}
 					}
 
-					span, div {
+					span,
+					div {
 						color: rgb(0, 0, 0);
 						font-size: 1.4rem;
 						font-weight: 400;
@@ -248,22 +254,12 @@
 
 				& > button {
 					height: 3rem;
+					width: 100%;
 					padding: 0 1.2rem;
 					text-align: left;
 
 					&:hover {
 						background-color: rgba(128, 128, 128, 0.103);
-					}
-
-					&:first-child {
-						span {
-							font-weight: 300;
-						}
-					}
-
-					& > span {
-						font-size: 1.4rem;
-						font-weight: 400;
 					}
 				}
 			}
