Finished mobile layout of trip-page; Working on integrating google maps to the page

--- a/web/src/stylesheets/abstracts/_variables.scss
+++ b/web/src/stylesheets/abstracts/_variables.scss
@@ -29,6 +29,7 @@ $muted-text-color: #757575;
 $muted-text-color-2: rgb(194, 194, 194);
 
 $highlight-hover-color: rgb(245, 245, 245);
+$avatar-background-color: rgba(230, 230, 230, 0.479);
 
 /// Disabled text color
 /// @type Color
