--- a/web/src/stylesheets/pages/_TripPage.scss
+++ b/web/src/stylesheets/pages/_TripPage.scss
@@ -1,11 +1,15 @@
 .TripPage {
 	--container-padding: 3rem;
 
+  h2 {
+    font-weight: 300;
+  }
+
 	.TripPage-container {
 		padding: var(--container-padding);
 		margin-left: auto;
 		margin-right: auto;
-    overflow-x: hidden;
+		overflow-x: hidden;
 	}
 
 	&__header {
@@ -31,12 +35,6 @@
 		border-radius: 0.8rem;
 		background: rgb(228, 228, 228);
 		margin-bottom: 2rem;
-	}
-
-	&__listing-title {
-		h2 {
-			font-weight: 300;
-		}
 	}
 
 	&__logistics {
@@ -66,88 +64,177 @@
 	&__contact {
 		display: flex;
 		flex-direction: column;
+	}
 
-		.active {
-			cursor: default;
-			& > a {
-				& > span,
-				& > svg {
-					color: black;
-				}
-			}
-			&:first-child {
-				cursor: pointer;
-			}
-		}
-    
-    & > button:last-child {
-      & > a {
-        border-bottom: 0;
-      }
-    }
-
-		& > button > a {
-			width: 100%;
-			display: flex;
-			align-items: center;
-			justify-content: flex-start;
-			padding: 1.5rem 0;
-			border-bottom: 1px solid $muted-line-color;
-			position: relative;
-			font-weight: 400;
-
+	.active {
+		cursor: default;
+		& > a,
+		& > div {
 			& > span,
 			& > svg {
-				color: $disabled-text-color;
-			}
-
-			&:first-child {
 				color: black;
 			}
+		}
+		&:first-child {
+			cursor: pointer;
+		}
+	}
 
-			&::after {
-				position: absolute;
-				content: "";
-				width: 100vw;
-				height: 100%;
-				// offsets the 3rem padding on the container. Adjust this on changing container padding
-				left: calc(var(--container-padding) * -1);
-				background-color: inherit;
-				z-index: -1;
-			}
+	button:last-child {
+		& > a,
+		& > div {
+			border-bottom: 0;
+		}
+	}
 
-			&:hover {
-				background-color: $highlight-hover-color;
-			}
+	button > a,
+	button > div {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		padding: 1.5rem 0;
+		border-bottom: 1px solid $muted-line-color;
+		position: relative;
+		font-weight: 400;
 
-			& > svg:first-child {
-				display: flex;
-				justify-content: flex-start;
-				width: 20px !important;
-				margin-right: 2rem;
-			}
+		& > span,
+		& > svg {
+			color: $disabled-text-color;
+		}
 
-			& > svg:last-child {
-				margin-left: auto;
-			}
+		&:first-child {
+			color: black;
+		}
+
+		&::after {
+			position: absolute;
+			content: "";
+			width: 100vw;
+			height: 100%;
+			// offsets the 3rem padding on the container. Adjust this on changing container padding
+			left: calc(var(--container-padding) * -1);
+			background-color: inherit;
+			z-index: -1;
+		}
+
+		&:hover {
+			background-color: $highlight-hover-color;
+		}
+
+		& > svg:first-child {
+			display: flex;
+			justify-content: flex-start;
+			width: 20px !important;
+			margin-right: 2rem;
+		}
+
+		& > svg:last-child {
+			margin-left: auto;
 		}
 	}
 
 	.big-divider {
 		margin: 2rem 0;
-    position: relative;
-    
-    &::after {
-      background-color: $muted-line-color;
-      position: absolute;
-      content: "";
-      width: 100vw;
-      height: 1rem;
-      left: calc(var(--container-padding) * -1)
-    }
+		position: relative;
+		height: 1rem;
+
+		&::after {
+			background-color: $muted-line-color;
+			position: absolute;
+			content: "";
+			width: 100vw;
+			height: 100%;
+			left: calc(var(--container-padding) * -1);
+		}
 	}
 
-  &__details {
+	&__receipt {
+		margin: 3rem 0;
+
+		&__title {
+			margin-bottom: 2rem;
+		}
+
+		&__breakdown {
+			.breakdown-line {
+				&:last-child {
+					font-weight: 300;
+					border-top: 1px solid $muted-line-color;
+					padding-top: 1rem;
+				}
+
+				margin: 1rem 0;
+				font-weight: 400;
+				display: flex;
+				justify-content: space-between;
+			}
+		}
+	}
+
+	&__directions {
+		margin: 3rem 0;
+
+		&__title {
+			margin-bottom: 2;
+		}
+
+		&__map {
+			margin: 2rem 0;
+			border: 1px solid black;
+			border-radius: 0.8rem;
+			height: 22rem;
+			background-color: grey;
+		}
+
+		&__address {
+			padding-bottom: 2rem;
+			font-weight: 400;
+			border-bottom: 1px solid $muted-line-color;
+
+			& > div:first-child {
+				margin: 1rem 0;
+				font-weight: 300;
+			}
+		}
+
+		&__copy {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+
+  &__host {
+    margin: 3rem 0;
     
+    &__title {
+      display: flex; 
+      justify-content: space-between;
+      align-items: center;
+
+      .host-details {
+        span {
+          text-decoration: underline;
+        }
+      }
+
+      .host-image {
+        width: 10rem;
+        height: 10rem;
+        background-color: $avatar-background-color;
+        border-radius: 50%;
+      }
+    }
+  }
+
+  &__support {
+    margin-top: 3rem;
+    margin-bottom: 5rem;
+
+    &__help {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+    }
   }
 }
