--- a/web/src/stylesheets/pages/_TripsPage.scss
+++ b/web/src/stylesheets/pages/_TripsPage.scss
@@ -182,6 +182,7 @@
 	}
 
 	&__title {
+		margin-top: auto;
 		padding: 2rem 2rem;
 
 		&:hover {
@@ -208,7 +209,6 @@
 	}
 
 	&__show-button {
-		margin-top: auto;
 		border-top: 1px solid $muted-line-color;
 		width: 100%;
 		height: fit-content;
@@ -265,7 +265,7 @@
 		}
 
 		&__img-container {
-			height: 22rem;
+			// height: 22rem;
 		}
 	}
 }
