Added markers onto trip-page google maps component

--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -19,7 +19,8 @@
 	"components/MobileSearch.scss", "components/Destinations.scss",
 	"components/ListingTypes.scss", "components/Inspirations.scss",
 	"components/MobileNavbar.scss", "components/FormSearch.scss",
-	"components/FormSearchMobile.scss", "components/ReviewItem.scss";
+	"components/FormSearchMobile.scss", "components/ReviewItem.scss",
+	"components/HouseMarker.scss";
 
 // 6. Page-specific styles
 @import "pages/Listing", "pages/Landing", "pages/EntryPage", "pages/UserPage",
