--- a/web/src/stylesheets/pages/_TripPage.scss
+++ b/web/src/stylesheets/pages/_TripPage.scss
@@ -1,8 +1,30 @@
 .TripPage {
-	--container-padding: 3rem;
+	--container-padding: 2rem 3rem;
 
 	h2 {
 		font-weight: 300;
+	}
+
+	.TripPage-back-button {
+    padding: 0 1.5rem;
+		height: 5.6rem;
+    width: 100%;
+    position: fixed;
+		display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid $muted-line-color;
+    background-color: white;
+    z-index: 10;
+
+    & svg {
+      width: 1.4rem !important;
+      height: 1.4rem !important;
+    }
+
+		&-filler {
+			height: 5.6rem;
+		}
 	}
 
 	.TripPage-container {
@@ -32,22 +54,41 @@
 	&__carousel {
 		&__image {
 			min-height: 22.5rem;
-      width: 100%;
+			width: 100%;
 			border-radius: 0.8rem;
 			margin-bottom: 2rem;
-      position: relative;
-      display: inline-block;
-      overflow: hidden;
-      padding-bottom: 50%;
+			position: relative;
+			display: inline-block;
+			overflow: hidden;
+			padding-bottom: 50%;
 
-      img {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        object-fit: cover;
-        object-position: 50% 50%;
-      }
+			.image-count {
+				display: inline-block;
+				padding: 0.5rem 1.25rem;
+				margin: 1rem;
+				background-color: rgba(19, 19, 19, 0.548);
+				border-radius: 0.25rem;
+				position: absolute;
+				bottom: 0;
+				right: 0;
+				color: white;
+				font-weight: 400;
+				font-size: 1.2rem;
+				letter-spacing: 0.25rem;
+			}
+
+			img {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				z-index: -1;
+				object-fit: cover;
+				object-position: 50% 50%;
+			}
+		}
+
+		& h2 {
+			line-height: 1.2;
 		}
 	}
 
@@ -151,7 +192,7 @@
 	.big-divider {
 		margin: 2rem 0;
 		position: relative;
-		height: 1rem;
+		height: 0.75rem;
 
 		&::after {
 			background-color: $muted-line-color;
@@ -195,10 +236,10 @@
 
 		&__map {
 			margin: 2rem 0;
-			border: 1px solid black;
 			border-radius: 0.8rem;
+			overflow: hidden;
 			height: 22rem;
-			background-color: grey;
+			width: 100%;
 		}
 
 		&__address {
