--- a/web/src/stylesheets/pages/_TripPage.scss
+++ b/web/src/stylesheets/pages/_TripPage.scss
@@ -1,26 +1,33 @@
 .TripPage {
-	--container-padding: 2rem 3rem;
+	--container-padding-vertical: 2rem;
+	--container-padding-horizontal: 3rem;
 
 	h2 {
 		font-weight: 300;
 	}
 
 	.TripPage-back-button {
-    padding: 0 1.5rem;
+		padding: 0 1.5rem;
 		height: 5.6rem;
-    width: 100%;
-    position: fixed;
+		width: 100%;
+		position: fixed;
 		display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid $muted-line-color;
-    background-color: white;
-    z-index: 10;
+		justify-content: space-between;
+		align-items: center;
+		border-bottom: 1px solid $muted-line-color;
+		background-color: white;
+		z-index: 10;
 
-    & svg {
+    & button {
       width: 1.4rem !important;
       height: 1.4rem !important;
+      position: relative;
+      @include buttonSvgOutline;
+
     }
+    
+		& svg {
+		}
 
 		&-filler {
 			height: 5.6rem;
@@ -28,7 +35,8 @@
 	}
 
 	.TripPage-container {
-		padding: var(--container-padding);
+		padding: var(--container-padding-vertical)
+			var(--container-padding-horizontal);
 		margin-left: auto;
 		margin-right: auto;
 		overflow-x: hidden;
@@ -81,7 +89,7 @@
 				position: absolute;
 				width: 100%;
 				height: 100%;
-				z-index: -1;
+				// z-index: -1;
 				object-fit: cover;
 				object-position: 50% 50%;
 			}
@@ -122,16 +130,16 @@
 	}
 
 	.active {
-		cursor: default;
 		& > a,
 		& > div {
+			cursor: pointer;
+			&:hover {
+				background-color: $highlight-hover-color;
+			}
 			& > span,
 			& > svg {
 				color: black;
 			}
-		}
-		&:first-child {
-			cursor: pointer;
 		}
 	}
 
@@ -152,14 +160,11 @@
 		border-bottom: 1px solid $muted-line-color;
 		position: relative;
 		font-weight: 400;
+		cursor: default;
 
 		& > span,
 		& > svg {
 			color: $disabled-text-color;
-		}
-
-		&:first-child {
-			color: black;
 		}
 
 		&::after {
@@ -168,13 +173,9 @@
 			width: 100vw;
 			height: 100%;
 			// offsets the 3rem padding on the container. Adjust this on changing container padding
-			left: calc(var(--container-padding) * -1);
+			left: calc(var(--container-padding-horizontal) * -1);
 			background-color: inherit;
 			z-index: -1;
-		}
-
-		&:hover {
-			background-color: $highlight-hover-color;
 		}
 
 		& > svg:first-child {
@@ -200,7 +201,7 @@
 			content: "";
 			width: 100vw;
 			height: 100%;
-			left: calc(var(--container-padding) * -1);
+			left: calc(var(--container-padding-horizontal) * -1);
 		}
 	}
 
