Finished creating queries for host page including hook for reviews data

--- a/web/src/stylesheets/components/_Navbar.scss
+++ b/web/src/stylesheets/components/_Navbar.scss
@@ -245,7 +245,7 @@
 					}
 				}
 
-				.divider {
+				.navbar-divider {
 					width: 100%;
 					height: 1px;
 					background-color: $muted-line-color;
